module(name = "roo_display", version = "2.3.2")

bazel_dep(name = "rules_cc", version = "0.2.16")

bazel_dep(name = "roo_testing", version = "1.2.1")

bazel_dep(name = "roo_backport", version = "1.2.1")
bazel_dep(name = "roo_collections", version = "1.4.1")
bazel_dep(name = "roo_io", version = "2.1.4")
