module(name = "roo_display", version = "3.0.3")

bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "roo_testing", version = "1.3.5")
bazel_dep(name = "roo_backport", version = "1.2.2")
bazel_dep(name = "roo_collections", version = "1.4.3")
bazel_dep(name = "roo_io", version = "2.1.6")
